system: add Entity Framework para lidar com tabelas e banco de dados

--- a/Empresas_CRUD/Server/appsettings.json
+++ b/Empresas_CRUD/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=FREIRE-PC\\SQLEXPRESS; Database=empresas-db; Trusted_Connection=true; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
